Trying to fix site title on mobile

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -58,6 +58,7 @@ HEADER
   }
   .site-header h1 {
     margin-bottom: 2rem;
+    padding-top: 1rem;
     font-size: 2.4rem;
     line-height: normal;
     text-align: center;
